--- a/julia_blog/templates/YNAB_API_pacing.html
+++ b/julia_blog/templates/YNAB_API_pacing.html
@@ -21,162 +21,98 @@
     <tr>
       <th>0</th>
       <td> Variable Monthly Expenses</td>
-      <td>Groceries £350/mo</td>
-      <td>102.04</td>
-      <td>219.65</td>
-      <td>10.46</td>
-      <td>20.20</td>
-      <td>117.61</td>
-      <td>31.47</td>
-      <td>11.92</td>
-      <td>18.00</td>
-      <td>67.74</td>
-      <td>-28.44</td>
-      <td>7</td>
+      <td>Taxi+Public Transport £50/mo</td>
+      <td>4.60</td>
+      <td>12.90</td>
+      <td>1.61</td>
+      <td>1.89</td>
+      <td>8.30</td>
+      <td>9.20</td>
+      <td>6.66</td>
+      <td>6.00</td>
+      <td>25.81</td>
+      <td>52.22</td>
+      <td>2</td>
     </tr>
     <tr>
       <th>1</th>
       <td> Variable Monthly Expenses</td>
-      <td>Taxi+Public Transport £50/mo</td>
-      <td>55.83</td>
-      <td>50.81</td>
-      <td>2.42</td>
-      <td>1.74</td>
-      <td>-5.02</td>
-      <td>74.44</td>
-      <td>6.51</td>
-      <td>2.00</td>
+      <td>Groceries £350/mo</td>
+      <td>48.05</td>
+      <td>82.58</td>
+      <td>10.32</td>
+      <td>11.33</td>
+      <td>34.53</td>
+      <td>15.02</td>
+      <td>11.84</td>
+      <td>22.00</td>
       <td></td>
-      <td>40.85</td>
-      <td>6</td>
+      <td>-26.07</td>
+      <td>4</td>
     </tr>
     <tr>
       <th>2</th>
       <td> Variable Monthly Expenses</td>
       <td>Dining Out / Takeaway £200/mo</td>
-      <td>158.65</td>
-      <td>107.48</td>
-      <td>5.12</td>
-      <td>0.00</td>
-      <td>-51.17</td>
-      <td>99.99</td>
-      <td>24.05</td>
-      <td>0.00</td>
+      <td>57.30</td>
+      <td>51.61</td>
+      <td>6.45</td>
+      <td>5.95</td>
+      <td>-5.69</td>
+      <td>28.65</td>
+      <td>22.19</td>
+      <td>6.00</td>
       <td></td>
-      <td>0.10</td>
-      <td>6</td>
+      <td>-4.81</td>
+      <td>3</td>
     </tr>
     <tr>
       <th>3</th>
       <td> Unpredictable Emergencies (Needs)</td>
-      <td> Phone/Computer Replacement</td>
-      <td>99.99</td>
+      <td> Health</td>
+      <td>9.95</td>
       <td>0.00</td>
       <td>0.00</td>
       <td>0.00</td>
       <td>0.00</td>
-      <td>20.00</td>
-      <td>99.99</td>
-      <td>4.00</td>
+      <td>2.49</td>
+      <td>9.95</td>
+      <td>39.00</td>
       <td></td>
       <td>0.00</td>
       <td>1</td>
     </tr>
     <tr>
       <th>4</th>
-      <td> Unpredictable Wants</td>
-      <td> Betting Deposits</td>
-      <td>60.00</td>
+      <td> Unpredictable Emergencies (Needs)</td>
+      <td> Phone/Computer Replacement</td>
+      <td>50.19</td>
       <td>0.00</td>
       <td>0.00</td>
       <td>0.00</td>
       <td>0.00</td>
-      <td>3.00</td>
-      <td>29.17</td>
-      <td>0.00</td>
+      <td>9.45</td>
+      <td>64.49</td>
+      <td>7.00</td>
       <td></td>
       <td>0.00</td>
-      <td>2</td>
+      <td>1</td>
     </tr>
     <tr>
       <th>5</th>
-      <td> Wedding Expenses</td>
-      <td>Party Drinks £600</td>
-      <td>155.88</td>
-      <td>474.19</td>
-      <td>22.58</td>
-      <td>49.47</td>
-      <td>318.31</td>
-      <td>22.27</td>
-      <td>155.88</td>
-      <td>3.00</td>
+      <td> Unpredictable Wants</td>
+      <td> Betting Deposits</td>
+      <td>-40.00</td>
+      <td>0.00</td>
+      <td>0.00</td>
+      <td>0.00</td>
+      <td>0.00</td>
+      <td>-9.52</td>
+      <td>-23.15</td>
+      <td>-4.00</td>
       <td></td>
-      <td>0.00</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>6</th>
-      <td> Wedding Expenses</td>
-      <td>Salon/Hair</td>
-      <td>33.00</td>
-      <td>44.71</td>
-      <td>2.13</td>
-      <td>3.00</td>
-      <td>11.71</td>
-      <td>50.00</td>
-      <td>23.80</td>
-      <td>1.00</td>
-      <td></td>
-      <td>0.00</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>7</th>
-      <td> Wedding Expenses</td>
-      <td>Party Rentals / Deco £500</td>
-      <td>1,196.20</td>
-      <td>949.99</td>
-      <td>45.24</td>
-      <td>18.74</td>
-      <td>-246.21</td>
-      <td>85.30</td>
-      <td>299.05</td>
-      <td>0.00</td>
-      <td></td>
-      <td>0.00</td>
-      <td>4</td>
-    </tr>
-    <tr>
-      <th>8</th>
-      <td> Wedding Expenses</td>
-      <td>Party Food £600</td>
-      <td>1,344.00</td>
-      <td>942.97</td>
-      <td>44.90</td>
-      <td>4.36</td>
-      <td>-401.03</td>
-      <td>96.55</td>
-      <td>1,344.00</td>
-      <td>0.00</td>
-      <td></td>
-      <td>0.00</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>9</th>
-      <td> Wedding Expenses</td>
-      <td>Cakes + gifts</td>
-      <td>183.79</td>
-      <td>128.81</td>
-      <td>6.13</td>
-      <td>0.58</td>
-      <td>-54.98</td>
-      <td>96.66</td>
-      <td>183.79</td>
-      <td>0.00</td>
-      <td></td>
-      <td>0.00</td>
-      <td>1</td>
+      <td>35.87</td>
+      <td>2</td>
     </tr>
   </tbody>
 </table>
