--- a/julia_blog/templates/budget_reporting.html
+++ b/julia_blog/templates/budget_reporting.html
@@ -5,11 +5,15 @@
               <div class="row flex-nowrap justify-content-between align-items-center">
             <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
         <div class="col-md-6 px-0">
-          <h4>Please select the functionality you want to look at:</h4>
+          <h4>Please select the reporting you want to look at:</h4>
           </div>
-          <a class="p-2 text-muted" href="{{ url_for('budgets.reporting') }}">Reporting</a>
-          <a class="p-2 text-muted" href="{{ url_for('budgets.budget') }}">Category Grouping Lab</a>
-          <a class="p-2 text-muted" href="{{ url_for('budgets.budget') }}">Income Allocation Lab</a>
+
+          <a class="p-2 text-muted" href="{{ url_for('budgets.groupreporting') }}">Category Group Reporting</a>
+          <a class="p-2 text-muted" href="{{ url_for('budgets.reporting') }}">Category Reporting</a>
+          <a class="p-2 text-muted" href="{{ url_for('budgets.pacing') }}">Pacing</a>
+          <a class="p-2 text-muted" href="{{ url_for('budgets.spending_time_series') }}">Timeseries of Spending</a>
+          <a class="p-2 text-muted" href="{{ url_for('budgets.budgeting_time_series') }}">Timeseries of Budgeting</a>
+          <a class="p-2 text-muted" href="{{ url_for('budgets.budget') }}">Savings Rate Analysis (50/30/20 Rule)</a>
 </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
           </div>
