--- a/julia_blog/templates/YNAB_API_pacing.html
+++ b/julia_blog/templates/YNAB_API_pacing.html
@@ -20,99 +20,67 @@
   <tbody>
     <tr>
       <th>0</th>
-      <td> Variable Monthly Expenses</td>
-      <td>Taxi+Public Transport £50/mo</td>
-      <td>4.60</td>
-      <td>12.90</td>
-      <td>1.61</td>
-      <td>1.89</td>
-      <td>8.30</td>
-      <td>9.20</td>
-      <td>6.66</td>
+      <td>Immediate Obligations</td>
+      <td> Electric</td>
+      <td>-39.00</td>
+      <td>10.58</td>
+      <td>1.32</td>
+      <td>3.33</td>
+      <td>49.58</td>
+      <td>nan</td>
+      <td>13.00</td>
       <td>6.00</td>
       <td>25.81</td>
-      <td>52.22</td>
-      <td>2</td>
+      <td>0.00</td>
+      <td>1</td>
     </tr>
     <tr>
       <th>1</th>
-      <td> Variable Monthly Expenses</td>
-      <td>Groceries £350/mo</td>
-      <td>48.05</td>
-      <td>82.58</td>
-      <td>10.32</td>
-      <td>11.33</td>
-      <td>34.53</td>
-      <td>15.02</td>
-      <td>11.84</td>
-      <td>22.00</td>
+      <td>Immediate Obligations</td>
+      <td> Groceries</td>
+      <td>45.00</td>
+      <td>38.97</td>
+      <td>4.87</td>
+      <td>4.42</td>
+      <td>-6.03</td>
+      <td>nan</td>
+      <td>27.10</td>
+      <td>3.00</td>
       <td></td>
-      <td>-26.07</td>
-      <td>4</td>
+      <td>10.20</td>
+      <td>2</td>
     </tr>
     <tr>
       <th>2</th>
-      <td> Variable Monthly Expenses</td>
-      <td>Dining Out / Takeaway £200/mo</td>
-      <td>57.30</td>
-      <td>51.61</td>
-      <td>6.45</td>
-      <td>5.95</td>
-      <td>-5.69</td>
-      <td>28.65</td>
-      <td>22.19</td>
-      <td>6.00</td>
+      <td>Immediate Obligations</td>
+      <td> Transportation</td>
+      <td>4.00</td>
+      <td>20.65</td>
+      <td>2.58</td>
+      <td>3.17</td>
+      <td>16.65</td>
+      <td>nan</td>
+      <td>4.00</td>
+      <td>19.00</td>
       <td></td>
-      <td>-4.81</td>
-      <td>3</td>
+      <td>0.00</td>
+      <td>1</td>
     </tr>
     <tr>
       <th>3</th>
-      <td> Unpredictable Emergencies (Needs)</td>
-      <td> Health</td>
-      <td>9.95</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>2.49</td>
-      <td>9.95</td>
-      <td>39.00</td>
+      <td>Just for Fun</td>
+      <td> Dining Out</td>
+      <td>40.00</td>
+      <td>64.52</td>
+      <td>8.06</td>
+      <td>8.75</td>
+      <td>24.52</td>
+      <td>nan</td>
+      <td>40.00</td>
+      <td>5.00</td>
       <td></td>
       <td>0.00</td>
       <td>1</td>
-    </tr>
-    <tr>
-      <th>4</th>
-      <td> Unpredictable Emergencies (Needs)</td>
-      <td> Phone/Computer Replacement</td>
-      <td>50.19</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>9.45</td>
-      <td>64.49</td>
-      <td>7.00</td>
-      <td></td>
-      <td>0.00</td>
-      <td>1</td>
-    </tr>
-    <tr>
-      <th>5</th>
-      <td> Unpredictable Wants</td>
-      <td> Betting Deposits</td>
-      <td>-40.00</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>0.00</td>
-      <td>-9.52</td>
-      <td>-23.15</td>
-      <td>-4.00</td>
-      <td></td>
-      <td>35.87</td>
-      <td>2</td>
     </tr>
   </tbody>
 </table>
