--- a/julia_blog/templates/YNAB_API_pacing.html
+++ b/julia_blog/templates/YNAB_API_pacing.html
@@ -22,49 +22,49 @@
       <th>0</th>
       <td> Variable Monthly Expenses</td>
       <td>Taxi+Public Transport £50/mo</td>
-      <td>4.60</td>
-      <td>12.90</td>
+      <td>15.15</td>
+      <td>22.58</td>
       <td>1.61</td>
-      <td>1.89</td>
-      <td>8.30</td>
-      <td>9.20</td>
-      <td>6.66</td>
-      <td>6.00</td>
-      <td>25.81</td>
-      <td>52.22</td>
-      <td>2</td>
+      <td>1.94</td>
+      <td>7.43</td>
+      <td>30.30</td>
+      <td>6.95</td>
+      <td>5.00</td>
+      <td>45.16</td>
+      <td>56.47</td>
+      <td>4</td>
     </tr>
     <tr>
       <th>1</th>
       <td> Variable Monthly Expenses</td>
-      <td>Groceries £350/mo</td>
-      <td>48.05</td>
-      <td>82.58</td>
-      <td>10.32</td>
-      <td>11.33</td>
-      <td>34.53</td>
-      <td>15.02</td>
-      <td>11.84</td>
-      <td>22.00</td>
+      <td>Dining Out / Takeaway £200/mo</td>
+      <td>110.29</td>
+      <td>90.32</td>
+      <td>6.45</td>
+      <td>4.98</td>
+      <td>-19.97</td>
+      <td>55.14</td>
+      <td>25.68</td>
+      <td>3.00</td>
       <td></td>
-      <td>-26.07</td>
-      <td>4</td>
+      <td>8.85</td>
+      <td>5</td>
     </tr>
     <tr>
       <th>2</th>
       <td> Variable Monthly Expenses</td>
-      <td>Dining Out / Takeaway £200/mo</td>
-      <td>57.30</td>
-      <td>51.61</td>
-      <td>6.45</td>
-      <td>5.95</td>
-      <td>-5.69</td>
-      <td>28.65</td>
-      <td>22.19</td>
-      <td>6.00</td>
+      <td>Groceries £350/mo</td>
+      <td>228.07</td>
+      <td>144.52</td>
+      <td>10.32</td>
+      <td>5.11</td>
+      <td>-83.55</td>
+      <td>71.27</td>
+      <td>24.73</td>
+      <td>3.00</td>
       <td></td>
-      <td>-4.81</td>
-      <td>3</td>
+      <td>35.64</td>
+      <td>9</td>
     </tr>
     <tr>
       <th>3</th>
@@ -86,20 +86,36 @@
       <th>4</th>
       <td> Unpredictable Emergencies (Needs)</td>
       <td> Phone/Computer Replacement</td>
-      <td>50.19</td>
+      <td>60.19</td>
       <td>0.00</td>
       <td>0.00</td>
       <td>0.00</td>
       <td>0.00</td>
-      <td>9.45</td>
-      <td>64.49</td>
-      <td>7.00</td>
+      <td>11.33</td>
+      <td>46.33</td>
+      <td>10.00</td>
+      <td></td>
+      <td>0.00</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <th>5</th>
+      <td> Periodic predictable Variable</td>
+      <td> Hospitality £500</td>
+      <td>2.70</td>
+      <td>0.00</td>
+      <td>0.00</td>
+      <td>0.00</td>
+      <td>0.00</td>
+      <td>0.64</td>
+      <td>2.70</td>
+      <td>110.00</td>
       <td></td>
       <td>0.00</td>
       <td>1</td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td> Unpredictable Wants</td>
       <td> Betting Deposits</td>
       <td>-40.00</td>
