--- a/julia_blog/templates/budget_reporting.html
+++ b/julia_blog/templates/budget_reporting.html
@@ -9,7 +9,7 @@
           </div>
 
           <a class="p-2 text-muted" href="{{ url_for('budgets.groupreporting') }}">Category Group Reporting</a>
-          <a class="p-2 text-muted" href="{{ url_for('budgets.reporting') }}">Category Reporting</a>
+          <a class="p-2 text-muted" href="{{ url_for('budgets.categoryreporting') }}">Category Reporting</a>
           <a class="p-2 text-muted" href="{{ url_for('budgets.pacing') }}">Pacing</a>
           <a class="p-2 text-muted" href="{{ url_for('budgets.spending_time_series') }}">Timeseries of Spending</a>
           <a class="p-2 text-muted" href="{{ url_for('budgets.budgeting_time_series') }}">Timeseries of Budgeting</a>
