--- a/julia_blog/templates/budget_group_analysis.html
+++ b/julia_blog/templates/budget_group_analysis.html
@@ -1,63 +1,1 @@
-{% extends "base.html" %}
-{% block content %}
-<div class="container">
-  <div class="jumbotron">
-    <div align='center'>
-      <h1 >Budget Overview by Category Groups</h1>
-
-    </div>
-  </div>
-<table border="1" class="table table-striped table-hover>
-  <thead>
-    <tr style="text-align: right;">
-      <th></th>
-      <th>category_group_name</th>
-      <th>spending_this_month</th>
-      <th>spending_this_month%</th>
-      <th>spending_last_month</th>
-      <th>spending_last_month%</th>
-      <th>budgeting_this_month</th>
-      <th>budgeting_this_month%</th>
-      <th>budgeting_last_month</th>
-      <th>budgeting_last_month%</th>
-      <th>spending_diff_mom</th>
-      <th>budgeting_diff_mom</th>
-      <th>ideal_contribution</th>
-      <th>ideal_contribution%</th>
-      <th>spending_3m_diff</th>
-      <th>budgeting_3m_diff</th>
-    </tr>
-  </thead>
-  <tbody>
-
-
-    <div class="container">
-
-{% for cat_group in rows %}
-
-    <tr>
-      <th>cat_group.category_group_name</th>
-      <td>cat_group.</td>
-      <td>cat_group.</td>
-      <td>cat_group.</td>
-      <td>cat_group.</td>
-      <td>cat_group.</td>
-      <td>cat_group.</td>
-      <td>cat_group.</td>
-      <td>cat_group.</td>
-      <td>cat_group.</td>
-      <td>cat_group.</td>
-      <td>cat_group.</td>
-      <td>cat_group.</td>
-      <td>cat_group.</td>
-      <td>cat_group.</td>
-      <td>cat_group.</td>
-    </tr>
-{% endfor %}
-
-
-</div>
-
-</div>
-{% endblock content %}
-
+b'{% extends "base.html" %} {% block content %} <div class="container">  <div class="jumbotron">\n    <div align=\'center\'>      <h1 >Budget Overview by Category Groups</h1>\n    </div>  </div><table border="1" class="table table-striped table-hover>  <thead>\n    <tr style="text-align: right;">            <th>category_group_name</th>\n      <th>spending_this_month</th>      <th>spending_this_month%</th>      <th>spending_last_month</th>      <th>spending_last_month%</th>\n      <th>budgeting_this_month</th>      <th>budgeting_this_month%</th>      <th>budgeting_last_month</th>      <th>budgeting_last_month%</th>      <th>spending_diff_mom</th>\n      <th>budgeting_diff_mom</th>      <th>ideal_contribution</th>      <th>ideal_contribution%</th>      <th>spending_3m_diff</th>      <th>budgeting_3m_diff</th>    </tr>\n  </thead>  <tbody>    <div class="container"><tr><td> Variable Monthly Expenses</td><td>351.51</td><td>14.40579330016475</td><td>431.25</td><td>3.1677997289465267</td><td>506.94000000000005</td><td>13.683920704845814</td><td>550.62</td><td>12.511190587636504</td><td>-18.490434782608702</td><td>-7.932875667429428</td><td>392.0</td><td>18.928054080154517</td><td>-30.620744103424457</td><td>-9.386544007245167</td></tr><tr><td>\xf0\x9f\xa7\xb7 Fixed Monthly Expenses</td><td>1782.79</td><td>73.06336729424687</td><td>1860.05</td><td>13.66322524249736</td><td>1893.0</td><td>51.09808240476808</td><td>1879.12</td><td>42.69737469950148</td><td>-4.153651783554202</td><td>0.7386436204180669</td><td>789.0</td><td>38.097537421535485</td><td>-8.558459210627568</td><td>-3.2218484473573783</td></tr><tr><td> Periodic Predictable Fix</td><td>0.0</td><td>0.0</td><td>123.37</td><td>0.9062294552119026</td><td>188.21</td><td>5.080385678500475</td><td>61.11</td><td>1.3885417471404358</td><td>-100.0</td><td>207.9855997381771</td><td>40.0</td><td>1.931434089811685</td><td>-100.0</td><td>148.8562739653577</td></tr><tr><td> Unpredictable Emergencies (Needs)</td><td>70.14</td><td>2.874519479029204</td><td>99.99</td><td>0.7344887997620017</td><td>183.61999999999998</td><td>4.956487000086377</td><td>385.83</td><td>8.76683132546546</td><td>-29.852985298529845</td><td>-52.40909208718867</td><td>257.0</td><td>12.409464027040078</td><td>16.58263615712783</td><td>-78.19930346683552</td></tr><tr><td> Periodic predictable Variable</td><td>2.7</td><td>0.11065301672909683</td><td>0.0</td><td>0.0</td><td>326.67</td><td>8.81786084477844</td><td>688.52</td><td>15.644555125857188</td><td>0.0</td><td>-52.55475512693894</td><td>161.0</td><td>7.774022211492033</td><td>-91.9</td><td>-23.94297333374724</td></tr><tr><td>\xf0\x9f\xa6\xaf Unpredictable Wants</td><td>-17.08</td><td>-0.6999827873085088</td><td>-72.58</td><td>-0.5331452853958005</td><td>-151.92999999999998</td><td>-4.101073248682733</td><td>441.2</td><td>10.024948761877928</td><td>-76.46734637641224</td><td>-134.435630099728</td><td>286.0</td><td>13.80975374215355</td><td>182.62548262548265</td><td>-118.66767693315859</td></tr><tr><td> Savings Categories</td><td>250.0</td><td>10.245649697138596</td><td>8125.95</td><td>59.69016164042442</td><td>750.0</td><td>20.244882093806684</td><td>749.95</td><td>17.040367914710682</td><td>-96.92343664433082</td><td>0.006667111140745696</td><td>146.0</td><td>7.049734427812651</td><td>-91.7816775239838</td><td>-82.44265576290563</td></tr><tr><td> Moving Costs</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>69.63</td><td>1.5821332327505897</td><td>0.0</td><td>-100.0</td><td>0.0</td><td>0.0</td><td>-100.0</td><td>-100.0</td></tr><tr><td>Past Categories</td><td>0.0</td><td>0.0</td><td>3045.52</td><td>22.37124041855357</td><td>0.0</td><td>0.0</td><td>989.3699999999999</td><td>22.480470436398832</td><td>-100.0</td><td>-100.0</td><td>0.0</td><td>0.0</td><td>-100.0</td><td>-100.0</td></tr><tr><td> Wish Farm 200/800/+</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>8.13</td><td>0.21945452189686449</td><td>-464.2</td><td>-10.547554885003931</td><td>0.0</td><td>-101.75140025850926</td><td>0.0</td><td>0.0</td><td>0.0</td><td>-88.33181839927283</td></tr><tr><td> Wish List</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>-950.13</td><td>-21.588858946335172</td><td>0.0</td><td>-100.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>-100.0</td></tr><tr><td>Future Categories</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td></tr><tr><td>Total Savings</td><td>1132.4339999999997</td><td>31.698695645115144</td><td>1632.3839999999998</td><td>10.707012112212997</td><td>1633.4</td><td>30.599246165259153</td><td>1632.3839999999998</td><td>27.055771501460868</td><td>-30.626984827099513</td><td>0.06224025719441251</td><td>0.0</td><td>0.0</td><td>-22.740338738830513</td><td>11.437779777006241</td></tr><tr><td>OVERALL</td><td>2440.06</td><td>0.0</td><td>13613.55</td><td>0.0</td><td>3704.6400000000003</td><td>0.0</td><td>4401.0199999999995</td><td>0.0</td><td>-425.88785488543584</td><td>-440.3528427700584</td><td>2071.0</td><td>0.0</td><td>-323.65276205542534</td><td>-555.3365463851646</td></tr>  </tbody></table></div></div>{% endblock content %}'
