--- a/julia_blog/templates/budget_lab.html
+++ b/julia_blog/templates/budget_lab.html
@@ -4,28 +4,22 @@
   <div class="jumbotron">
               <div class="row flex-nowrap justify-content-between align-items-center">
             <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
-
         <div class="col-md-6 px-0">
-          <h4>Please select the functionality you want to look at:</h4>
+          <h4>Please select the reporting you want to look at:</h4>
           </div>
-          <a class="p-2 text-muted" href="{{ url_for('budgets.reporting') }}">Reporting</a>
-          <a class="p-2 text-muted" href="{{ url_for('budgets.budget') }}">Category Grouping Lab</a>
-          <a class="p-2 text-muted" href="{{ url_for('budgets.budget') }}">User Input</a>
+
+          <a class="p-2 text-muted" href="{{ url_for('budgets.groupreporting') }}">Category Group Reporting</a>
+          <a class="p-2 text-muted" href="{{ url_for('budgets.reporting') }}">Category Reporting</a>
+          <a class="p-2 text-muted" href="{{ url_for('budgets.pacing') }}">Pacing</a>
+          <a class="p-2 text-muted" href="{{ url_for('budgets.spending_time_series') }}">Timeseries of Spending</a>
+          <a class="p-2 text-muted" href="{{ url_for('budgets.budgeting_time_series') }}">Timeseries of Budgeting</a>
+          <a class="p-2 text-muted" href="{{ url_for('budgets.budget') }}">Savings Rate Analysis (50/30/20 Rule)</a>
 </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
           </div>
         </div>
 
-                <div>
-                    <ul><li>The Budget information is taken from <a href="https://www.youneedabudget.com/">YNAB</a></li>
-                    <li>The Purpose is to allow a deeper Analysis of the data in addition to the existing reports</li>
-                    <li>It requires a currently active YNAB Account, and a few months of historical Spending</li>
-                        <li>Functionalities are three-fold: <ul>
-                        <li>Reporting on existing data</li>
-                        <li>A  Laboratory to allow to try new things without impacing the live budget</li>
-                        <li>Additional user information about each cateogry and group that allows to use the existing data for Analysis based on other Frameworks</li></ul></li></ul>
-                </div>
-      <br><br><br>
+
 <ul>
 <li>link to budget</li>
 <li>read budget, check for new cats and prompt user input</li>
